src/core-crm/objects/hed__Application__c/fields/Admission_Basis__c.field-meta.xml
<CustomField>
    <fullName>Admission_Basis__c</fullName>
    <description>The basis on which the offer of admission has been made to the applicant.</description>
    <label>Admission Basis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>