src/core-crm/objects/hed__Application__c/fields/Admission_Process__c.field-meta.xml
<CustomField>
    <fullName>Admission_Process__c</fullName>
    <description>The status description given to an application to facilitate processing of applications. eg Applications created due to previously deferred offer.</description>
    <label>Admission Process</label>
    <length>80</length>
    <type>Text</type>
</CustomField>