src/core-crm/objects/hed__Application__c/fields/Agency_AccountID__c.field-meta.xml
<CustomField>
    <fullName>Agency_AccountID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Agency Details from SAMS and Studylink loaded to account</description>
    <label>Agency Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Applications (Agency Account)</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>