src/core-crm/objects/hed__Application__c/fields/Agency_Branch__c.field-meta.xml
<CustomField>
    <fullName>Agency_Branch__c</fullName>
    <description>The name of the agency branch</description>
    <label>Agency Branch</label>
    <length>80</length>
    <type>Text</type>
</CustomField>