src/core-crm/objects/hed__Application__c/fields/Agency_Code__c.field-meta.xml
<CustomField>
    <fullName>Agency_Code__c</fullName>
    <description>The code allocated to the agency by QUT</description>
    <label>Agency Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>