src/core-crm/objects/hed__Application__c/fields/Agency_Email__c.field-meta.xml
<CustomField>
    <fullName>Agency_Email__c</fullName>
    <description>The agency email address</description>
    <label>Agency Email</label>
    <type>Email</type>
</CustomField>