src/core-crm/objects/hed__Application__c/fields/App_Condition_Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>App_Condition_Verification_Status__c</fullName>
    <description>This status indicates whether application conditions have been verified</description>
    <label>App Condition Verification Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>