src/core-crm/objects/hed__Application__c/fields/Application_Format__c.field-meta.xml
<CustomField>
    <fullName>Application_Format__c</fullName>
    <description>The format of the application whether paper application or electronic format was used.</description>
    <label>Application Format</label>
    <length>80</length>
    <type>Text</type>
</CustomField>