src/core-crm/objects/hed__Application__c/fields/Application_Method__c.field-meta.xml
<CustomField>
    <fullName>Application_Method__c</fullName>
    <description>The method the application was submitted.</description>
    <label>Application Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>