src/core-crm/objects/hed__Application__c/fields/Application_Source__c.field-meta.xml
<CustomField>
    <fullName>Application_Source__c</fullName>
    <description>The System where the Application records is sourced from.</description>
    <label>Application Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SAMS</fullName>
            </value>
            <value>
                <fullName>Studylink</fullName>
            </value>
            <value>
                <fullName>QTAC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>