src/core-crm/objects/hed__Application__c/fields/Application_Stage__c.field-meta.xml
<CustomField>
    <fullName>Application_Stage__c</fullName>
    <description>The stage of processing the admission application is in as signed by application source.</description>
    <label>Application Stage</label>
    <length>80</length>
    <type>Text</type>
</CustomField>