src/core-crm/objects/hed__Application__c/fields/Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Application_Status__c</fullName>
    <description>The status given to the application by the application source.</description>
    <label>Application Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>