src/core-crm/objects/hed__Application__c/fields/Application_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Status_Date__c</fullName>
    <description>The date that status changed in application source.</description>
    <label>Application Status Date</label>
    <type>Date</type>
</CustomField>