src/core-crm/objects/hed__Application__c/fields/Applied_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Applied_Attendance__c</fullName>
    <description>The attendance mode applied for in the admission application.</description>
    <label>Applied Attendance Mode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>