src/core-crm/objects/hed__Application__c/fields/Applied_Intake_Study_Period__c.field-meta.xml
<CustomField>
    <fullName>Applied_Intake_Study_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The starting study period applied for.</description>
    <label>Applied Intake Study Period</label>
    <referenceTo>hed__Term__c</referenceTo>
    <relationshipLabel>Applications (Applied Intake Study Period)</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>