src/core-crm/objects/hed__Application__c/fields/Applied_Major__c.field-meta.xml
<CustomField>
    <fullName>Applied_Major__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The specialisation the applicant is seeking within the course.</description>
    <label>Applied Major</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Study_Area__c.Study_Area_Type__c</field>
            <operation>contains</operation>
            <value>Major</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Study_Area__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>