src/core-crm/objects/hed__Application__c/fields/Applied_Program__c.field-meta.xml
<CustomField>
    <fullName>Applied_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The academic course or major the applicant is applying to.</description>
    <label>Applied Program</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Applications (Applied Program)</relationshipLabel>
    <relationshipName>Applications1</relationshipName>
    <type>Lookup</type>
</CustomField>