src/core-crm/objects/hed__Application__c/fields/Assessment_Result__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Result__c</fullName>
    <description>The code description for finalised assessment result assigned in application source.</description>
    <label>Assessment Result</label>
    <length>80</length>
    <type>Text</type>
</CustomField>