src/core-crm/objects/hed__Application__c/fields/BirthDate__c.field-meta.xml
<CustomField>
    <fullName>BirthDate__c</fullName>
    <description>The applicant’s date of birth</description>
    <label>BirthDate</label>
    <type>Date</type>
</CustomField>