src/core-crm/objects/hed__Application__c/fields/Calculated_Intake_Date__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Intake_Date__c</fullName>
    <description>Calculated date as the latest intake date based on logic corresponding to the application record type.</description>
    <label>Calculated Intake Date</label>
    <type>Date</type>
</CustomField>