src/core-crm/objects/hed__Application__c/fields/Citizenship_Country__c.field-meta.xml
<CustomField>
    <fullName>Citizenship_Country__c</fullName>
    <description>The country of citizenship</description>
    <label>Citizenship Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries</valueSetName>
    </valueSet>
</CustomField>