src/core-crm/objects/hed__Application__c/fields/Citizenship_Type__c.field-meta.xml
<CustomField>
    <fullName>Citizenship_Type__c</fullName>
    <description>The categorisation of the Citizenship Status as per study application.</description>
    <label>Citizenship Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>