src/core-crm/objects/hed__Application__c/fields/Course_Allocability_Status__c.field-meta.xml
<CustomField>
    <fullName>Course_Allocability_Status__c</fullName>
    <description>Used to exclude people who are not eligible for entry.</description>
    <label>Course Allocability Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>