src/core-crm/objects/hed__Application__c/fields/Current_Preference__c.field-meta.xml
<CustomField>
    <fullName>Current_Preference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Preference</label>
    <referenceTo>Application_Preference__c</referenceTo>
    <relationshipLabel>Applications (Current Preference)</relationshipLabel>
    <relationshipName>Applications1</relationshipName>
    <type>Lookup</type>
</CustomField>