src/core-crm/objects/hed__Application__c/fields/Defered_Study_Period__c.field-meta.xml
<CustomField>
    <fullName>Defered_Study_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Study Period the Applicant has defered the comencement of their study to.</description>
    <label>Defered Study Period</label>
    <referenceTo>hed__Term__c</referenceTo>
    <relationshipLabel>Applications (Defered Study Period)</relationshipLabel>
    <relationshipName>Applications1</relationshipName>
    <type>Lookup</type>
</CustomField>