src/core-crm/objects/hed__Application__c/fields/Deferred_Study_Period__c.field-meta.xml
<CustomField>
    <fullName>Deferred_Study_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The study period the applicant has deferred the comencement of their study to</description>
    <label>Deferred Study Period</label>
    <referenceTo>hed__Term__c</referenceTo>
    <relationshipLabel>Applications (Deferred Study Period)</relationshipLabel>
    <relationshipName>Applications_Deferred_Study_Period</relationshipName>
    <type>Lookup</type>
</CustomField>