src/core-crm/objects/hed__Application__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>The applicant’s email address on application</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>