src/core-crm/objects/hed__Application__c/fields/End_of_Offer__c.field-meta.xml
<CustomField>
    <fullName>End_of_Offer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>End of Offer</label>
    <type>Checkbox</type>
</CustomField>