src/core-crm/objects/hed__Application__c/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <description>The External ID used for integration.</description>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>