src/core-crm/objects/hed__Application__c/fields/First_Peoples__c.field-meta.xml
<CustomField>
    <fullName>First_Peoples__c</fullName>
    <description>The People the applicant has identified themselves as on their QTAC application.</description>
    <label>QTAC First Peoples</label>
    <length>255</length>
    <type>Text</type>
</CustomField>