src/core-crm/objects/hed__Application__c/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <description>The applicant’s first name</description>
    <label>First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>