src/core-crm/objects/hed__Application__c/fields/Forced_Offer_Reason__c.field-meta.xml
<CustomField>
    <fullName>Forced_Offer_Reason__c</fullName>
    <label>Forced Offer Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>