src/core-crm/objects/hed__Application__c/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <description>The Gender captured from QTAC application.</description>
    <label>Gender</label>
    <length>50</length>
    <type>Text</type>
</CustomField>