src/core-crm/objects/hed__Application__c/fields/hed__Application_Date__c.field-meta.xml
<CustomField>
    <fullName>hed__Application_Date__c</fullName>
    <description>The date and time when the application was submitted.</description>
    <inlineHelpText>The date and time when the application was submitted.</inlineHelpText>
    <label>Application Date</label>
    <type>DateTime</type>
</CustomField>