src/core-crm/objects/hed__Application__c/fields/hed__Application_Type__c.field-meta.xml
<CustomField>
    <fullName>hed__Application_Type__c</fullName>
    <description>The type of program or track the applicant is applying to.</description>
    <inlineHelpText>The type of program or track the applicant is applying to.</inlineHelpText>
    <label>Application Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Graduate</fullName>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
            <value>
                <fullName>Undergraduate</fullName>
            </value>
            <value>
                <fullName>Legacy</fullName>
            </value>
            <value>
                <fullName>CiAnywhere</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>