src/core-crm/objects/hed__Application__c/fields/hed__Open_Date__c.field-meta.xml
<CustomField>
    <fullName>hed__Open_Date__c</fullName>
    <description>The date when applicants can submit an application.</description>
    <inlineHelpText>The date when applicants can submit an application.</inlineHelpText>
    <label>Open Date</label>
    <type>Date</type>
</CustomField>