src/core-crm/objects/hed__Application__c/fields/Highest_Level_of_Attainment__c.field-meta.xml
<CustomField>
    <fullName>Highest_Level_of_Attainment__c</fullName>
    <description>Highest level education the person has achieved at the time of application</description>
    <label>Highest Level of Attainment</label>
    <length>80</length>
    <type>Text</type>
</CustomField>