src/core-crm/objects/hed__Application__c/fields/Home_Language__c.field-meta.xml
<CustomField>
    <fullName>Home_Language__c</fullName>
    <description>The language predominantly spoken at home in relation to study application.</description>
    <label>Home Language</label>
    <length>80</length>
    <type>Text</type>
</CustomField>