src/core-crm/objects/hed__Application__c/fields/Indigenous_Status__c.field-meta.xml
<CustomField>
    <fullName>Indigenous_Status__c</fullName>
    <description>The Australian Indigenous Peoples the person identifies as</description>
    <label>Indigenous Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ATSI_Code</valueSetName>
    </valueSet>
</CustomField>