src/core-crm/objects/hed__Application__c/fields/Intake_Year__c.field-meta.xml
<CustomField>
    <fullName>Intake_Year__c</fullName>
    <description>The intake year the application is related to</description>
    <label>Intake Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>