src/core-crm/objects/hed__Application__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>The QTAC application is still active.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>