src/core-crm/objects/hed__Application__c/fields/Is_Agent_Assisted__c.field-meta.xml
<CustomField>
    <fullName>Is_Agent_Assisted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicating if the applicant is being assisted with thier application to study by an agent</description>
    <label>Agent Assisted</label>
    <type>Checkbox</type>
</CustomField>