src/core-crm/objects/hed__Application__c/fields/Is_Applying_For_Visa_Onshore_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Is_Applying_For_Visa_Onshore_Applicant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicating if the applicant is an onshore international student</description>
    <label>Applying for Visa Onshore Applicant</label>
    <type>Checkbox</type>
</CustomField>