src/core-crm/objects/hed__Application__c/fields/Is_Current_Start_QUT__c.field-meta.xml
<CustomField>
    <fullName>Is_Current_Start_QUT__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the applicant is studying with QUT under Start QUT Program.</description>
    <label>Current Start QUT</label>
    <type>Checkbox</type>
</CustomField>