src/core-crm/objects/hed__Application__c/fields/Is_Current_Year_12_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Is_Current_Year_12_Applicant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The applicant is currently studying year 12</description>
    <label>Current Year 12 Applicant</label>
    <type>Checkbox</type>
</CustomField>