src/core-crm/objects/hed__Application__c/fields/Is_EAS_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Is_EAS_Applicant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicating if applicant qualifies for Educational Access Scheme (EAS) is assistance given for eligibility of applicant for the applied study.</description>
    <label>EAS Applicant</label>
    <type>Checkbox</type>
</CustomField>