src/core-crm/objects/hed__Application__c/fields/Is_Education_Distruption_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Is_Education_Distruption_Applicant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicating if applicant is qualified for EAS due to education being disrupted</description>
    <label>Education Distruption Applicant</label>
    <type>Checkbox</type>
</CustomField>