src/core-crm/objects/hed__Application__c/fields/Is_Elite_Athelete_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Is_Elite_Athelete_Applicant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicating if applicant is qualified for EAS due to participation in elite sport or atheletics</description>
    <label>Elite Athelete Applicant</label>
    <type>Checkbox</type>
</CustomField>