src/core-crm/objects/hed__Application__c/fields/Is_English_language_Difficulty_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Is_English_language_Difficulty_Applicant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicating if the applicant has English language difficulty</description>
    <label>English Language Difficulty Applicant</label>
    <type>Checkbox</type>
</CustomField>