src/core-crm/objects/hed__Application__c/fields/Is_Equity_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Is_Equity_Applicant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The applicant has been qualified as equity applicant</description>
    <label>Equity Applicant</label>
    <type>Checkbox</type>
</CustomField>