src/core-crm/objects/hed__Application__c/fields/Is_Financial_Hardship_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Is_Financial_Hardship_Applicant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicating if applicant is qualified for EAS due financial hardship.</description>
    <label>Financial Hardship Applicant</label>
    <type>Checkbox</type>
</CustomField>