src/core-crm/objects/hed__Application__c/fields/Is_First_In_Family_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Is_First_In_Family_Applicant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicating if applicant is qualified for EAS due to being the first member of the family to study at tertiary education.</description>
    <label>First In Family Applicant</label>
    <type>Checkbox</type>
</CustomField>