src/core-crm/objects/hed__Application__c/fields/Is_Greater_Brisbane__c.field-meta.xml
<CustomField>
    <fullName>Is_Greater_Brisbane__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Applicant’s residential Address is in Greater Brisbane</description>
    <label>Greater Brisbane</label>
    <type>Checkbox</type>
</CustomField>