src/core-crm/objects/hed__Application__c/fields/Is_Home_Env_Responsibilities_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Is_Home_Env_Responsibilities_Applicant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Applicant that has Home Responsibilities</description>
    <label>Home Env Responsibilities Applicant</label>
    <type>Checkbox</type>
</CustomField>