src/core-crm/objects/hed__Application__c/fields/Is_International_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Is_International_Applicant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicating if the applicant is an international applicant</description>
    <label>Is International Applicant</label>
    <type>Checkbox</type>
</CustomField>