src/core-crm/objects/hed__Application__c/fields/Is_Low_Socio_Economic_School_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Is_Low_Socio_Economic_School_Applicant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The applicant is studying at low socio-economic school</description>
    <label>Low Socio-Economic School Applicant</label>
    <type>Checkbox</type>
</CustomField>