src/core-crm/objects/hed__Application__c/fields/Is_Personal_Illness_Disability_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Is_Personal_Illness_Disability_Applicant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicating if applicant is qualified for EAS due to Illness or disability</description>
    <label>Pesonal Illness Disability Applicant</label>
    <type>Checkbox</type>
</CustomField>