src/core-crm/objects/hed__Application__c/fields/Is_School_Environment_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Is_School_Environment_Applicant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicating if applicant qualified for EAS due to school environment.</description>
    <label>School Environment Applicant</label>
    <type>Checkbox</type>
</CustomField>