src/core-crm/objects/hed__Application__c/fields/Is_WP_Partner_School_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Is_WP_Partner_School_Applicant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Widening participation program applicant</description>
    <label>WP Partner School Applicant</label>
    <type>Checkbox</type>
</CustomField>