src/core-crm/objects/hed__Application__c/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <description>The applicant’s last name</description>
    <label>Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>