src/core-crm/objects/hed__Application__c/fields/MiddleName__c.field-meta.xml
<CustomField>
    <fullName>MiddleName__c</fullName>
    <description>The applicant’s middle name</description>
    <label>Middle Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>