src/core-crm/objects/hed__Application__c/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <description>The applicant’s mobile number</description>
    <label>Mobile</label>
    <type>Phone</type>
</CustomField>