src/core-crm/objects/hed__Application__c/fields/Nominated_Student_ID__c.field-meta.xml
<CustomField>
    <fullName>Nominated_Student_ID__c</fullName>
    <description>The QUT Student ID inidcated in Study Link based on previouse interaction or study in QUT that is yet to be qualified in SAMS</description>
    <label>Nominated Student ID</label>
    <length>11</length>
    <type>Text</type>
</CustomField>