src/core-crm/objects/hed__Application__c/fields/Offer_Condition__c.field-meta.xml
<CustomField>
    <fullName>Offer_Condition__c</fullName>
    <description>List of conditions on the offer.</description>
    <label>Offer Condition</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>