src/core-crm/objects/hed__Application__c/fields/Offer_Lapse_Date__c.field-meta.xml
<CustomField>
    <fullName>Offer_Lapse_Date__c</fullName>
    <description>At conclusion of assessment an offer is create for the applied study. The offer is active till Offer End Date.</description>
    <label>Offer Lapse Date</label>
    <type>Date</type>
</CustomField>