src/core-crm/objects/hed__Application__c/fields/Offer_Response__c.field-meta.xml
<CustomField>
    <fullName>Offer_Response__c</fullName>
    <description>The response received by QTAC about the offer.</description>
    <label>Offer Response</label>
    <length>255</length>
    <type>Text</type>
</CustomField>