src/core-crm/objects/hed__Application__c/fields/Offer_Response_Date__c.field-meta.xml
<CustomField>
    <fullName>Offer_Response_Date__c</fullName>
    <description>The date when the student responded to the offer</description>
    <label>Offer Response Date</label>
    <type>Date</type>
</CustomField>