src/core-crm/objects/hed__Application__c/fields/Offer_Response_Time__c.field-meta.xml
<CustomField>
    <fullName>Offer_Response_Time__c</fullName>
    <description>The time on the date when the student responded to the offer</description>
    <label>Offer Response Time</label>
    <type>Time</type>
</CustomField>