src/core-crm/objects/hed__Application__c/fields/Offer_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Offer_Start_Date__c</fullName>
    <description>At conclusion of assessment an offer is created for the applied study. The offer is active from Offer Start Date.</description>
    <label>Offer Start Date</label>
    <type>Date</type>
</CustomField>