src/core-crm/objects/hed__Application__c/fields/Offer_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Offer_Status_Date__c</fullName>
    <description>The date the offer status has come to effect in application source system.</description>
    <label>Offer Status Date</label>
    <type>Date</type>
</CustomField>