src/core-crm/objects/hed__Application__c/fields/Offerable__c.field-meta.xml
<CustomField>
    <fullName>Offerable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Offerable</label>
    <type>Checkbox</type>
</CustomField>